src/index.css
@import "tailwindcss";

@theme {
  --font-sans: 'Manrope', sans-serif;
  --font-display: 'Montserrat', sans-serif;
  --animate-aurora: aurora 60s linear infinite;
}

@keyframes aurora {
  from {
    background-position: 50% 50%, 50% 50%;
  }
  to {
    background-position: 350% 50%, 350% 50%;
  }
}

